[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/TimesNewPixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/EndScreen.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[node name="End" type="MarginContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0, 0, 0, 0.627451 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 640.0
margin_bottom = 360.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 213.0
margin_top = 122.0
margin_right = 426.0
margin_bottom = 238.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 213.0
margin_bottom = 41.0

[node name="GameOver" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 213.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 4 )
text = "Game Ovar"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 213.0
margin_bottom = 66.0

[node name="Try" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 60.0
margin_right = 152.0
margin_bottom = 21.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Try again"

[node name="CenterContainer4" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 213.0
margin_bottom = 91.0

[node name="Menu" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer4"]
margin_left = 81.0
margin_right = 131.0
margin_bottom = 21.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Menu"

[node name="CenterContainer5" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 95.0
margin_right = 213.0
margin_bottom = 116.0

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer5"]
margin_left = 89.0
margin_right = 124.0
margin_bottom = 21.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Exit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/Try" to="." method="_on_Try_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer4/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer5/Exit" to="." method="_on_Exit_pressed"]
